[gd_scene load_steps=15 format=2]

[ext_resource path="res://Material Duck Hunt/duck/death/3.png" type="Texture" id=1]
[ext_resource path="res://Material Duck Hunt/duck/scare.png" type="Texture" id=2]
[ext_resource path="res://Material Duck Hunt/duck/death/2.png" type="Texture" id=3]
[ext_resource path="res://Duck.gd" type="Script" id=4]
[ext_resource path="res://Material Duck Hunt/duck/death/0.png" type="Texture" id=5]
[ext_resource path="res://Material Duck Hunt/duck/death/1.png" type="Texture" id=6]
[ext_resource path="res://Material Duck Hunt/duck/top/sprite_0.png" type="Texture" id=7]
[ext_resource path="res://Material Duck Hunt/duck/top/sprite_1.png" type="Texture" id=8]
[ext_resource path="res://Material Duck Hunt/duck/top/sprite_2.png" type="Texture" id=9]
[ext_resource path="res://Material Duck Hunt/duck/side/sprite_1.png" type="Texture" id=10]
[ext_resource path="res://Material Duck Hunt/duck/side/sprite_0.png" type="Texture" id=11]
[ext_resource path="res://Material Duck Hunt/duck/side/sprite_2.png" type="Texture" id=12]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "top",
"speed": 7.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 10 ), ExtResource( 12 ) ],
"loop": true,
"name": "side",
"speed": 7.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "scare",
"speed": 7.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 3 ), ExtResource( 1 ) ],
"loop": true,
"name": "death",
"speed": 7.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 44.0114

[node name="Duck" type="KinematicBody2D"]
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "side"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="moviment" type="Timer" parent="."]
autostart = true

[node name="anima" type="Timer" parent="."]
autostart = true

[node name="death" type="Timer" parent="."]
wait_time = 0.2

[connection signal="timeout" from="moviment" to="." method="_on_moviment_timeout"]
[connection signal="timeout" from="anima" to="." method="_on_anima_timeout"]
[connection signal="timeout" from="death" to="." method="_on_death_timeout"]
